objects/vlocity_ins__CardFrameworkConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Organization level Card Framework configuration settings.</description>
    <fields>
        <fullName>vlocity_ins__DisableCache__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable platform caching process on cardframework.</description>
        <inlineHelpText>Disable platform caching process on cardframework.</inlineHelpText>
        <label>Disable Cache</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisableDatasourceApexRemote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the ApexRemote Datasource at the org level.</description>
        <inlineHelpText>Disable the ApexRemote Datasource at the org level.</inlineHelpText>
        <label>Disable Datasource ApexRemote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisableDatasourceDataRaptor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the DataRaptor Datasource at the org level.</description>
        <inlineHelpText>Disable the DataRaptor Datasource at the org level.</inlineHelpText>
        <label>Disable Datasource DataRaptor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisableDatasourceIntegrationProcedures__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the IntegrationProcedures Datasource at the org level.</description>
        <inlineHelpText>Disable the IntegrationProcedures Datasource at the org level.</inlineHelpText>
        <label>Disable Datasource IntegrationProcedures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisableDatasourceQuery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the SOQL Query datasource at the org level</description>
        <inlineHelpText>Disable the SOQL Query datasource at the org level</inlineHelpText>
        <label>Disable Datasource SOQL Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisableDatasourceREST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the REST Datasource at the org level.</description>
        <inlineHelpText>Disable the REST Datasource at the org level.</inlineHelpText>
        <label>Disable Datasource REST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisableDatasourceSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the SOSL Search Datasource at the org level.</description>
        <inlineHelpText>Disable the SOSL Search Datasource at the org level.</inlineHelpText>
        <label>Disable Datasource SOSL Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisableStreamingAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the Streaming API datasource at the org level</description>
        <inlineHelpText>Disable the Streaming API datasource at the org level</inlineHelpText>
        <label>Disable Streaming API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Disable_Datasource_ApexRemote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the ApexRemote Datasource at the org level.</description>
        <inlineHelpText>Disable the ApexRemote Datasource at the org level.</inlineHelpText>
        <label>Disable Datasource ApexRemote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Disable_Datasource_DataRaptor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the DataRaptor Datasource at the org level.</description>
        <inlineHelpText>Disable the DataRaptor Datasource at the org level.</inlineHelpText>
        <label>Disable Datasource DataRaptor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Disable_Datasource_IntegrationProcedures__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the IntegrationProcedures Datasource at the org level.</description>
        <inlineHelpText>Disable the IntegrationProcedures Datasource at the org level.</inlineHelpText>
        <label>Disable Datasource IntegrationProcedures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Disable_Datasource_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the SOQL datasource at the org level</description>
        <inlineHelpText>Disable the SOQL datasource at the org level</inlineHelpText>
        <label>Disable Datasource SOQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Disable_Datasource_REST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the REST Datasource at the org level.</description>
        <inlineHelpText>Disable the REST Datasource at the org level.</inlineHelpText>
        <label>Disable Datasource REST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Disable_Datasource_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable the SOSL Search Datasource at the org level.</description>
        <inlineHelpText>Disable the SOSL Search Datasource at the org level.</inlineHelpText>
        <label>Disable Datasource SOSL Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnableFutureMethod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable the use of future method on platform caching.</description>
        <inlineHelpText>Enable the use of future method on platform caching.</inlineHelpText>
        <label>Enable Future Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnableNewTemplateDesigner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable the new template designer</description>
        <inlineHelpText>Enable the new template designer</inlineHelpText>
        <label>Enable New Template Designer</label>
        <type>Checkbox</type>
    </fields>
    <label>Card Framework Configuration</label>
</CustomObject>